--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      MAKE: "make -j"
+      MAKE: "make -j -l 10 --output-sync=target"
       LOCAL: ${{ github.workspace }}/local
       LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
       CFLAGS: "-Wall"
@@ -56,7 +56,7 @@ jobs:
     runs-on: macos-latest
 
     env:
-      MAKE: "make -j"
+      MAKE: "gmake -j -l 10 --output-sync=target"
       LOCAL: ${{ github.workspace }}/local
       LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
       CFLAGS: "-Wall"
@@ -70,7 +70,7 @@ jobs:
           brew install gcc
           brew install make
           gcc --version
-          make --version
+          gmake --version
 
       - name: "Build dependencies"
         run: |
@@ -136,7 +136,7 @@ jobs:
         shell: C:\cygwin64\bin\bash.exe --login -o igncr '{0}'
 
     env:
-      MAKE: "make -j"
+      MAKE: "make -j -l 10 --output-sync=target"
       REPO: /cygdrive/d/a/flint2/flint2 # FIXME: De-hardcode this
       CFLAGS: "-Wall -D _WIN64"
       EXTRA_OPTIONS: "--enable-static --disable-shared"
@@ -182,7 +182,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      MAKE: "make -j"
+      MAKE: "make -j -l 10 --output-sync=target"
       LOCAL: ${{ github.workspace }}/local
       LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
       CFLAGS: "-Wall"
@@ -226,7 +226,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      MAKE: "make -j"
+      MAKE: "make -j -l 10 --output-sync=target"
       LOCAL: ${{ github.workspace }}/local
       LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
       CFLAGS: "-Wall"
@@ -309,7 +309,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      MAKE: "make -j"
+      MAKE: "make -j -l 10 --output-sync=target"
       LOCAL: ${{ github.workspace }}/local
       LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
       CFLAGS: ""
