--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,6 +45,10 @@ jobs:
         run: |
           $MAKE check
 
+      - if: failure()
+        name: "If failure, stop all other jobs"
+        uses: andymckay/cancel-action@0.2
+
 
 
   ##############################################################################
@@ -92,6 +96,10 @@ jobs:
         run: |
           $MAKE check
 
+      - if: failure()
+        name: "If failure, stop all other jobs"
+        uses: andymckay/cancel-action@0.2
+
 
 
   ##############################################################################
@@ -120,6 +128,10 @@ jobs:
             ./configure CC=clang CFLAGS="-Wall" --disable-static --enable-shared
             gmake -j8
             gmake -j8 check
+
+      - if: failure()
+        name: "If failure, stop all other jobs"
+        uses: andymckay/cancel-action@0.2
 
 
 
@@ -171,6 +183,10 @@ jobs:
           cd ${REPO}
           $MAKE check
 
+      - if: failure()
+        name: "If failure, stop all other jobs"
+        uses: andymckay/cancel-action@0.2
+
 
 
   #############################################################################
@@ -215,6 +231,10 @@ jobs:
         run: |
           $MAKE check
 
+      - if: failure()
+        name: "If failure, stop all other jobs"
+        uses: andymckay/cancel-action@0.2
+
 
 
   #############################################################################
@@ -258,6 +278,10 @@ jobs:
           $MAKE
           ldd lib/libflint.so
 
+      - if: failure()
+        name: "If failure, stop all other jobs"
+        uses: andymckay/cancel-action@0.2
+
 
 
   #############################################################################
@@ -297,6 +321,11 @@ jobs:
           cd build
           ctest -j4 --output-on-failure --timeout 300
         shell: bash
+
+      # FIXME: Fix Cygwin so this can be enabled.
+      # - if: failure()
+      #   name: "If failure, stop all other jobs"
+      #   uses: andymckay/cancel-action@0.2
 
 
 
@@ -363,3 +392,7 @@ jobs:
       - name: "Check Nemo.jl"
         run: |
           julia -e "import Pkg; Pkg.test(\"Nemo\")"
+
+      - if: failure()
+        name: "If failure, stop all other jobs"
+        uses: andymckay/cancel-action@0.2
