--- a/Makefile.in
+++ b/Makefile.in
@@ -68,7 +68,7 @@ HEADER_DIRS :=                                                              \
         double_interval dlog                                                \
         fmpz_extras     fmpzi                                               \
         bool_mat        partitions                                          \
-        fmpr            mag                                                 \
+        mag                                                                 \
         arf             acf             arb             acb                 \
         arb_mat         arb_poly        arb_calc        arb_hypgeom         \
         acb_mat         acb_poly        acb_calc        acb_hypgeom         \
