--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,390 +1,42 @@
-name: CI
-
-
 on: [push, pull_request]
 
 
 jobs:
-  ##############################################################################
-  # ubuntu with gcc
-  ##############################################################################
-  ubuntu-gcc:
-    name: Ubuntu GCC (x10)
-
-    runs-on: ubuntu-latest
-
-    env:
-      MAKE: "make -j --output-sync=target"
-      LOCAL: ${{ github.workspace }}/local
-      LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
-      CC: "gcc"
-      CFLAGS: "-Wall"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: "Setup"
-        run: |
-          sudo apt install libgmp-dev
-          sudo apt install libmpfr-dev
-          gcc --version
-          make --version
-
-      - name: "Configure"
-        run: |
-          ./configure CC=${CC} CFLAGS="${CFLAGS}" --with-gmp=/usr --with-mpfr=/usr
-
-      - name: "Compile"
-        run: |
-          $MAKE
-          ldd libflint.so
-
-      - name: "Check"
-        run: |
-          export FLINT_TEST_MULTIPLIER=10
-          $MAKE check
-
-      - if: failure()
-        name: "If failure, stop all other jobs"
-        uses: andymckay/cancel-action@0.2
-
-
-
-  ##############################################################################
-  # macos with gcc
-  ##############################################################################
-  macos-gcc:
-    name: macOS GCC (x3)
-
-    runs-on: macos-latest
-
-    env:
-      MAKE: "gmake -j --output-sync=target"
-      LOCAL: ${{ github.workspace }}/local
-      LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
-      CFLAGS: "-Wall"
-      EXTRA_OPTIONS: "--disable-static --enable-shared"
-      CC: "gcc"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: "Setup"
-        run: |
-          brew install gcc
-          brew install make
-          brew install gmp
-          brew install mpfr
-          gcc --version
-          gmake --version
-
-      - name: "Configure"
-        run: |
-          ./configure CC=${CC} CFLAGS="${CFLAGS}" --with-gmp=$(brew --prefix) \
-              --with-mpfr=$(brew --prefix) ${EXTRA_OPTIONS}
-
-      - name: "Compile"
-        run: |
-          $MAKE
-
-      - name: "Check"
-        run: |
-          export FLINT_TEST_MULTIPLIER=3
-          $MAKE check
-
-      - if: failure()
-        name: "If failure, stop all other jobs"
-        uses: andymckay/cancel-action@0.2
-
-
-
-  ##############################################################################
-  # freebsd with clang
-  ##############################################################################
-  freebsd-gcc:
-    name: FreeBSD Clang (x0.5)
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: "Set up FreeBSD"
-        uses: cross-platform-actions/action@v0.10.0
-        with:
-          operating_system: freebsd
-          version: '13.1'
-          shell: bash
-          run: |
-            yes | sudo pkg install gmake
-            yes | sudo pkg install gmp
-            yes | sudo pkg install mpfr
-            gmake --version
-            clang --version
-            export FLINT_TEST_MULTIPLIER=0.5
-            ./configure CC=clang CFLAGS="-Wall" --disable-static --enable-shared
-            gmake -j
-            gmake -j check
-
-      - if: failure()
-        name: "If failure, stop all other jobs"
-        uses: andymckay/cancel-action@0.2
-
-
-
-  ##############################################################################
-  # cygwin with gcc
-  ##############################################################################
-  cygwin-gcc:
-    name: Cygwin GCC (x1)
+  msvc:
+    name: MSVC
 
     runs-on: windows-latest
 
-    defaults:
-      run:
-        shell: C:\cygwin64\bin\bash.exe --login -o igncr '{0}'
-
-    env:
-      MAKE: "make -j --output-sync=target"
-      REPO: /cygdrive/d/a/flint2/flint2 # FIXME: De-hardcode this
-      CFLAGS: "-Wall -D _WIN64"
-      EXTRA_OPTIONS: "--enable-shared --disable-static"
-      CC: "gcc"
-
     steps:
       - uses: actions/checkout@v3
 
-      - name: "Set up Cygwin"
-        uses: gap-actions/setup-cygwin@v1
+      - name: "Setup Conda"
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          PKGS_TO_INSTALL: "dos2unix,gcc-core,make,libgmp-devel,libmpfr-devel"
-
-      - name: "Setup"
+          miniconda-version: "latest"
+          channels: conda-forge
         run: |
-          gcc --version
-          make --version
+          conda install --yes gmp
+          conda install --yes mpfr
+          conda install --yes pthreads-win32
 
-      - name: "Configure"
-        run: |
-          cd ${REPO}
-          dos2unix configure
-          ./configure CC=${CC} CFLAGS="${CFLAGS}" ${EXTRA_OPTIONS}
-
-      - name: "Compile"
-        run: |
-          cd ${REPO}
-          ${MAKE}
-
-      - name: "Check"
-        run: |
-          cd ${REPO}
-          export FLINT_TEST_MULTIPLIER=1
-          $MAKE check
-
-      - if: failure()
-        name: "If failure, stop all other jobs"
-        uses: andymckay/cancel-action@0.2
-
-
-
-  #############################################################################
-  # ubuntu with clang
-  #############################################################################
-  ubuntu-clang:
-    name: Ubuntu Clang (x5)
-
-    runs-on: ubuntu-latest
-
-    env:
-      MAKE: "make -j --output-sync=target"
-      LOCAL: ${{ github.workspace }}/local
-      LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
-      CFLAGS: "-Wall"
-      CC: "clang"
-      EXTRA_OPTIONS: "--disable-static --enable-shared --with-pkg-config"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: "Setup"
-        run: |
-          sudo apt install libgmp-dev
-          sudo apt install libmpfr-dev
-          clang --version
-          make --version
-
-      - name: "Configure"
-        run: |
-          ./configure CC=${CC} CFLAGS="${CFLAGS}" ${EXTRA_OPTIONS}
-
-      - name: "Compile"
-        run: |
-          $MAKE
-          ldd libflint.so
-
-      - name: "Check"
-        run: |
-          export FLINT_TEST_MULTIPLIER=5
-          $MAKE check
-
-      - if: failure()
-        name: "If failure, stop all other jobs"
-        uses: andymckay/cancel-action@0.2
-
-
-
-  #############################################################################
-  # ubuntu with gcc and cmake (no checks)
-  #############################################################################
-  ubuntu-cmake-gcc:
-    name: Ubuntu GCC via CMake (no check)
-
-    runs-on: ubuntu-latest
-
-    env:
-      MAKE: "make -j --output-sync=target"
-      LOCAL: ${{ github.workspace }}/local
-      LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
-      CFLAGS: "-Wall"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: "Setup"
-        run: |
-          sudo apt install cmake
-          sudo apt install libgmp-dev
-          sudo apt install libmpfr-dev
-          gcc --version
-          make --version
-          cmake --version
+      - name: "Setup MSVC"
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x86_64
 
       - name: "Configure"
         run: |
           mkdir build
           cd build
-          cmake -G"Unix Makefiles" -DWITH_NTL=no -DBUILD_TESTING=yes \
-              -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=${LOCAL} ..
+          set "CFLAGS=/wd4146 /wd4018 /wd4267 /wd4244"
+          set "FLINT_TEST_MULTIPLIER=1"
+          cmake -G "Ninja" -DBUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Release ..
 
-      - name: "Compile"
+      - name: "Build"
         run: |
-          cd build
-          $MAKE
-          ldd lib/libflint.so
+          cmake --build . -- -j4
 
-      - if: failure()
-        name: "If failure, stop all other jobs"
-        uses: andymckay/cancel-action@0.2
-
-
-
-  #############################################################################
-  # mingw with gcc
-  #############################################################################
-  mingw64-gcc:
-    name: MinGW GCC (x0.5)
-
-    runs-on: windows-2019
-
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: "Setup"
+      - name: "Test"
         run: |
-          gcc --version
-          cmake --version
-
-      - name: "Configure"
-        run: |
-          mkdir -p build
-          cd build
-          cmake -G "MinGW Makefiles" -DBUILD_TESTING=ON \
-                                    -DCMAKE_BUILD_TYPE=Release ..
-
-      - name: "Compile"
-        run: |
-          cd build
-          cmake --build . -- -j8
-
-      - name: "Check"
-        run: |
-          cd build
-          export FLINT_TEST_MULTIPLIER=0.5
-          ctest -j8 --output-on-failure --timeout 300
-
-      # FIXME: Fix Cygwin so this can be enabled.
-      # - if: failure()
-      #   name: "If failure, stop all other jobs"
-      #   uses: andymckay/cancel-action@0.2
-
-
-
-  ##############################################################################
-  # nemo
-  ##############################################################################
-  nemo:
-    name: Nemo.jl
-
-    runs-on: ubuntu-latest
-
-    env:
-      MAKE: "make -j --output-sync=target"
-      LOCAL: ${{ github.workspace }}/local
-      LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
-      CFLAGS: ""
-      EXTRA_OPTIONS: "--disable-static --enable-shared --with-pkg-config"
-      CC: "gcc"
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: "Setup"
-        run: |
-          sudo apt install sed
-          sudo apt install libgmp-dev
-          sudo apt install libmpfr-dev
-          gcc --version
-          make --version
-          julia --version
-
-      - name: "Configure"
-        run: |
-          # Make sure that we output an soname which corresponds to FLINT_JLL's
-          # soname
-          wget https://raw.githubusercontent.com/JuliaPackaging/Yggdrasil/master/F/FLINT/build_tarballs.jl
-          FLINT_JLL_VERSION=$(grep "upstream_version =" build_tarballs.jl | sed "s/upstream_version = v\"\([0-9\.]*\)\"/\1/")
-          FLINT_JLL_SONAME=$(grep "$FLINT_JLL_VERSION => " configure | sed "s/# $FLINT_JLL_VERSION => \([0-9\.]\+\)/\1/")
-          FLINT_JLL_MAJOR=$(echo $FLINT_JLL_SONAME | sed "s/\([0-9]\+\)\.[0-9]\+\.[0-9]\+/\1/")
-          FLINT_JLL_MINOR=$(echo $FLINT_JLL_SONAME | sed "s/[0-9]\+\.\([0-9]\+\)\.[0-9]\+/\1/")
-          FLINT_JLL_PATCH=$(echo $FLINT_JLL_SONAME | sed "s/[0-9]\+\.[0-9]\+\.\([0-9]\+\)/\1/")
-          sed -i "s/^\(FLINT_MAJOR=\)[0-9]\+/\1$FLINT_JLL_MAJOR/" configure
-          sed -i "s/^\(FLINT_MINOR=\)[0-9]\+/\1$FLINT_JLL_MINOR/" configure
-          sed -i "s/^\(FLINT_PATCH=\)[0-9]\+/\1$FLINT_JLL_PATCH/" configure
-
-          # Now we can create the makefile
-          ./configure CC=${CC} CFLAGS="${CFLAGS}" --prefix=${LOCAL} ${EXTRA_OPTIONS}
-
-      - name: "Compile and install"
-        run: |
-          $MAKE
-          $MAKE install
-
-      - name: "Set up Nemo.jl"
-        run: |
-          # Override FLINT_jll's libflint with ours
-          julia -e "import Pkg; Pkg.add(\"Nemo\");"
-          echo -e "[e134572f-a0d5-539d-bddf-3cad8db41a82]\nFLINT = \"${LOCAL}\"" > ~/.julia/artifacts/Overrides.toml
-          touch ~/.julia/packages/Nemo/*/src/Nemo.jl
-          julia -e "using Nemo; println(\"Path to Nemo's libflint:\", Nemo.libflint)"
-
-      - name: "Check Nemo.jl"
-        run: |
-          julia -e "import Pkg; Pkg.test(\"Nemo\")"
-
-      - if: failure()
-        name: "If failure, stop all other jobs"
-        uses: andymckay/cancel-action@0.2
+          ctest -j4 --output-on-failure --timeout 100
