--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,10 +18,14 @@ jobs:
         with:
           miniconda-version: "latest"
           channels: conda-forge
-          run: |
-            conda install --yes gmp
-            conda install --yes mpfr
-            conda install --yes pthreads-win32
+
+      - name: "Install dependencies"
+        run: |
+          conda install --yes gmp
+          conda install --yes mpfr
+          conda install --yes pthreads-win32
+          conda info
+          confa list
 
       - name: "Setup MSVC"
         uses: ilammy/msvc-dev-cmd@v1
