--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,11 +21,11 @@ jobs:
 
       - name: "Install dependencies"
         run: |
-          conda install --yes -c conda-forge m2w64-gmp
           # conda install --yes -c conda-forge mpfr
-          # conda install --yes -c conda-forge pthreads-win32
+          conda install --yes -c conda-forge m2w64-gmp
+          conda install --yes -c conda-forge pthreads-win32
           conda info
-          confa list
+          conda list
 
       - name: "Setup MSVC"
         uses: ilammy/msvc-dev-cmd@v1
@@ -38,6 +38,8 @@ jobs:
           cd build
           set "CFLAGS=/wd4146 /wd4018 /wd4267 /wd4244"
           set "FLINT_TEST_MULTIPLIER=1"
+          set "LIB=C:\Miniconda3\Library\lib;%LIB%"
+          set "CPATH=C:\Miniconda3\Library\include;%CPATH%"
           cmake -G "Ninja" -DBUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Release ..
 
       - name: "Build"
