--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,7 +277,7 @@ if(BUILD_SHARED_LIBS AND WIN32)
 endif()
 
 if(WIN32 OR MINGW)
-    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS yes)
+    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 endif()
 
 if (HAS_FLAG_MPOPCNT)
