--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,7 +42,7 @@ jobs:
       - name: "Build"
         run: |
           cd build
-          set "CFLAGS=/wd4018 /wd4146 /wd4244 /wd4267 /wd4305 /wd4996"
+          set "cl=/wd4018 /wd4146 /wd4244 /wd4267 /wd4305 /wd4996 %cl%"
           cmake --build . -- -j4
 
       - name: "Test"
